# cixel

./: CMakeLists_.txt  LICENSE  README.md  cixel.h
samples/: CMakeLists.txt  shader.cpp  shader.h
samples/img2sixel/: CMakeLists.txt  main.c
samples/opengl/: CMakeLists.txt  triangle.cpp
test/: CMakeLists.txt  main.c  test.c  test.cpp  utest.h
